--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="actionTextColorSnackbar">@color/yp_white</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#AEAFB4</color>
     <color name="background_bottom_sheet">#FFFFFF</color>
+    <color name="hint_color">#1A1B22</color>
 </resources>
